RESOLVED FIXED47666
[GTK] Failing test LayoutTests/editing/undo/orphaned-selection-crash-bug32823-2.html
https://bugs.webkit.org/show_bug.cgi?id=47666
Summary [GTK] Failing test LayoutTests/editing/undo/orphaned-selection-crash-bug32823...
Sergio Villar Senin
Reported 2010-10-14 05:27:52 PDT
The actual issue is most likely https://bugs.webkit.org/show_bug.cgi?id=47661. We have now a more strict decoding of base64 data with the recent land of the soupURILoader stuff. That's the reason why this test started to fail.
Attachments
Fix for the failing test (1.92 KB, patch)
2010-10-14 05:32 PDT, Sergio Villar Senin
no flags
Sergio Villar Senin
Comment 1 2010-10-14 05:32:14 PDT
Created attachment 70730 [details] Fix for the failing test Reverted to old behaviour
Xan Lopez
Comment 2 2010-10-14 05:35:59 PDT
Comment on attachment 70730 [details] Fix for the failing test r=me
WebKit Commit Bot
Comment 3 2010-10-14 10:14:08 PDT
Comment on attachment 70730 [details] Fix for the failing test Clearing flags on attachment: 70730 Committed r69775: <http://trac.webkit.org/changeset/69775>
WebKit Commit Bot
Comment 4 2010-10-14 10:14:13 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5 2010-10-14 12:39:49 PDT
Note that Safari (or more precisely, CFNetwork) is strict in this respect - "data:image/png;base64,iVBORw0KGrkJggg==" fails to load, while "data:image/png;base64,iVBORw0KGrkJggg=" loads fine (but then fails to render, since the data itself is of course broken). This matches Firefox.
Martin Robinson
Comment 6 2010-10-14 14:45:18 PDT
So perhaps instead of loading the URL, we just need to fail in a better way?
Sergio Villar Senin
Comment 7 2010-10-15 00:22:29 PDT
(In reply to comment #6) > So perhaps instead of loading the URL, we just need to fail in a better way? Yeah. We reverted the change in order to mimic the old behaviour but I think it'd be better to fail in a better way
Note You need to log in before you can comment on or make changes to this bug.