2010-10-14  Sergio Villar Senin  <svillar@igalia.com>

Reviewed by Xan Lopez.

        [GTK] Failing test LayoutTests/editing/undo/orphaned-selection-crash-bug32823-2.html
        https://bugs.webkit.org/show_bug.cgi?id=47666

        Do a less strict decoding of base64 data url's as it was done
        before. The actual problem is most likely
        https://bugs.webkit.org/show_bug.cgi?id=47661 tough.

        * platform/network/soup/cache/soup-request-data.c:
        (webkit_soup_request_data_send):

Canonical link: https://commits.webkit.org/60362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69775 268f45cc-cd09-0410-ab3c-d52691b4dbfc