WebCore/platform/network/soup/cache/soup-request-data.c
@@ -98,15 +98,9 @@ webkit_soup_request_data_send (WebKitSoupRequest   *request,
 		guchar *buf;
 
 		if (base64) {
-			int inlen, state = 0;
-			guint save = 0;
+			buf = g_base64_decode (start, &data->priv->content_length);
 
-			inlen = strlen (start);
-			buf = g_malloc (inlen * 3 / 4);
-			data->priv->content_length =
-				g_base64_decode_step (start, inlen, buf,
-						      &state, &save);
-			if (state != 0) {
+			if (!buf || data->priv->content_length <= 0) {
 				g_free (buf);
 				goto fail;
 			}
